@@ -1,5 +1,5 @@
 1.2.2:
- - Solarisに対応
+ - Solaris10(Intel)に対応
 
 1.2.1: 2009/6/16
  - msyncをリファクタリング
