@@ -1,7 +1,7 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.61)
-AC_INIT(makuosan, 1.2.2, info-makuosan@klab.jp)
+AC_INIT(makuosan, 1.2.2-rc1, info-makuosan@klab.jp)
 AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([makuosan.c])
 AC_CONFIG_HEADER([config.h])
